Refactor UPGRADE_README.md to remove obsolete sections
Removed outdated remote configuration and build status sections from the upgrade documentation. Updated migration impact and known issues sections for clarity.